fix spacing issue with .block-remove-background-padding in mobile

--- a/sass/_content-entry-block.scss
+++ b/sass/_content-entry-block.scss
@@ -91,6 +91,14 @@
         .block-title {
             text-shadow: $text-shadow-white-med;
         }
+        
+        @include breakpoint( small-medium ) {
+            padding: $space-default;
+        }
+        
+        @include breakpoint( small ) {
+            padding: $space-default-half + 10px;   
+        }
     
     } // &.block-remove-background-padding
     
